# uuv-mission

./: .gitignore  CMakeLists.txt  DataManager.hpp  Dockerfile  GuiWiFiFrames.hpp  GuiWiFiTask.cpp  GuiWiFiTask.hpp  MissionParser.hpp  Readme.md  UDP_FIXES_SUMMARY.md  VehicleData.hpp  mission_manager.cpp  structures.hpp  udpTaskMgmt.c  udpTaskMgmt.h
.devcontainer/: devcontainer.json
c code/: OperationMode.h  WiFiRead.c  WiFiWrite.c  externFuncs.h  interfaceDefines.h  interfaceExterns.h  interfaceGlobals.h  interfaceStructs.h  main.c  taskMgmt.c  taskMgmt.h
common/: DataNode.hpp  ThreadTask.hpp  udp.rar
common/udp/: udpSerialize.h  udpclient.c  udpclient.cpp  udpclient.h  udpclient.hpp  udpserver.c  udpserver.cpp  udpserver.h  udpserver.hpp
